// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Start /> Should renders 1`] = `
<div
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="font__mono sc-dnqmqq difCss"
  >
    <div
      className="font__mono sc-htpNat iytjrA"
    >
      <div
        className="sc-bxivhb iKpfLW"
      >
        edloidas production
      </div>
      <div
        className="sc-ifAKCX RfDSL"
      >
        Penta Project
      </div>
      <div
        className="sc-EHOje bMrtUk"
      >
        A Cyberpunk Action Game
      </div>
    </div>
    <div
      className="sc-iwsKbI jRAMkw"
    >
      <ul
        className="sc-bZQynM cyleeR"
      >
        <li
          className="sc-gzVnrw kSojoV"
        />
        <li
          className="sc-gzVnrw kSojoV"
        />
        <li
          className="sc-gzVnrw kSojoV"
        />
        <li
          className="sc-gzVnrw kSojoV"
        />
      </ul>
    </div>
  </div>
</div>
`;

exports[`<Start /> Should switch to Await loader 1`] = `
<div
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="font__mono sc-dnqmqq difCss"
  >
    <div
      className="font__mono sc-htpNat iytjrA"
    >
      <div
        className="sc-bxivhb iKpfLW"
      >
        edloidas production
      </div>
      <div
        className="sc-ifAKCX RfDSL"
      >
        Penta Project
      </div>
      <div
        className="sc-EHOje bMrtUk"
      >
        A Cyberpunk Action Game
      </div>
    </div>
    <div
      className="sc-iwsKbI jRAMkw"
    >
      <button
        autoFocus={true}
        className="font__mono sc-htoDjs jDINIj"
      >
        Press Any Key
      </button>
    </div>
  </div>
</div>
`;
